--- a/ueb02/Knuth-Fisher-Yates.html
+++ b/ueb02/Knuth-Fisher-Yates.html
@@ -11,8 +11,8 @@
         <div class="top">
             Mise: <input type="text" name="Mise" id="Mise" value="0"/>
             <input class="nextButton" type="button" value="Jouer" id="myButton" onclick="startGame()" >
-            Porte monnaie: <input type="label" name="PM" id="PM" value="20" disabled/>
-            Gains: <input type="text" name="gains" id="gains" value="" disabled/>
+            Porte monnaie: <input type="label" name="PM" id="PM" value="200" disabled/>
+            Dernier gains: <input type="text" name="gains" id="gains" value="" disabled/>
         </div>
 
         </br>
