--- a/ueb02/Knuth-Fisher-Yates.html
+++ b/ueb02/Knuth-Fisher-Yates.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="Knuth-Fisher-Yates.css">
+    <link rel="stylesheet" type="text/css" href="CSS/Knuth-Fisher-Yates.css">
     <title>Knuth-Fisher-Yates</title>
-    <script src="Knuth-Fisher-Yates.js" type="application/javascript"></script>
+    <script src="JS/Knuth-Fisher-Yates.js" type="application/javascript"></script>
 </head>
 <body>
     <div id="page-wrap">
