--- a/ueb02/Knuth-Fisher-Yates.html
+++ b/ueb02/Knuth-Fisher-Yates.html
@@ -13,6 +13,10 @@
             <input class="nextButton" type="button" value="Jouer" id="myButton" onclick="startGame()" >
             Geldbeutel: <input type="label" name="PM" id="PM" value="200" disabled/>
             Letzter Gewinn: <input type="text" name="gains" id="gains" value="" disabled/>
+            </br>
+            </br>
+            </br>
+            <input class="restart" type="button" value="Restart" id="myButton" onclick="restart()" >
         </div>
 
         </br>
